# rust_api

./: .env  Cargo.toml
db/: staging.db
migrations/2023-11-05-023734_cities/: down.sql  up.sql
src/: main.rs  schema.rs  sql.rs
