[package]
name = "home_rustapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.5.0-rc", features = ["msgpack", "json"] }
diesel = { version = "2.1.3", features = ["sqlite"]}
dotenvy = "0.15.7"
